--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -289,9 +289,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
+                android:id="@+id/clRandomExample"
                 android:background="@drawable/white_corner_background"
                 android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/clBookmarkContainer">
 
                 <TextView
@@ -350,6 +350,39 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvRandomExample" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_margin="25dp"
+                android:id="@+id/clContribute"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/white_corner_background"
+                app:layout_constraintTop_toBottomOf="@+id/clRandomExample"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="40dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="15dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tvContribute"
+                    android:src="@drawable/ic_contribute"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/chapter_title"
+                    android:text="Contribute"
+                    android:layout_margin="20dp"
+                    android:id="@+id/tvContribute"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/metropolis_semi_bold"
+                    android:layout_marginLeft="20dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
