--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -284,7 +284,30 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_margin="25dp"
+                android:id="@+id/clCheatSheets"
+                android:background="@drawable/white_corner_background"
+                app:layout_constraintTop_toBottomOf="@+id/clBookmarkContainer"
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/chapter_title"
+                    android:text="Cheat Sheets"
+                    android:layout_margin="20dp"
+                    android:id="@+id/tvCheatSheet"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/metropolis_semi_bold"
+                    android:layout_marginLeft="20dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -292,7 +315,7 @@
                 android:id="@+id/clRandomExample"
                 android:background="@drawable/white_corner_background"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/clBookmarkContainer">
+                app:layout_constraintTop_toBottomOf="@id/clCheatSheets">
 
                 <TextView
                     android:id="@+id/tvCurlyBraces"
